--- a/.gitignore
+++ b/.gitignore
@@ -6,7 +6,7 @@ dist/
 
 label/
 datawig.egg-info
-datawig/__pycache__
+*/__pycache__
 test/__pycache__
 test/resources
 .cache
@@ -15,3 +15,4 @@ build
 experiments/
 docs/_build
 agModels/
+.ipynb_checkpoints/
